--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -1,26 +1,64 @@
-{{ define "base" }}
-
+{{ define "base"}}
 <!DOCTYPE html>
 <html lang="en">
-  {{template "header" .}}
 
-  <body>
-    {{block "content" . }}
+{{template "header" .}}
 
-    {{ end }}
+<style>
+body {
+    margin-top: 4em;
+}
+</style>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+{{block "css" .}}
 
-    {{template "footer" . }}
+{{end}}
 
-    {{block "js" . }}
+<body>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Breeds
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/cat-breeds">Cat Breeds</a></li>
+            <li><a class="dropdown-item" href="/dog-breeds">Dog Breeds</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cat-breeders">Cat Breeders Directory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dog-breeders">Dog Breeders Directory</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-    {{ end }}
-  </body>
+    {{block "content" .}}
+
+    {{end}}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    {{template "footer" .}}
+
+    {{block "js" .}}
+
+    {{end}}
+</body>
 </html>
-
-{{ end }}
+{{end}}
