--- a/templates/partials/footer.partial.gohtml
+++ b/templates/partials/footer.partial.gohtml
@@ -1,14 +1,12 @@
 {{define "footer"}}
 
 <div class="container">
-  <div class="row">
-    <div class="col tex-center">
-      <hr />
-      <small class="text-muted"
-        >© 2019 - {{.Year}} {{.Site.Title}}. All rights reserved.</small
-      >
+    <div class="row">
+        <div class="col text-center">
+        <hr>
+        <small class="text-muted">Copyright &copy; GoCode.ca</small>
+        </div>
     </div>
-  </div>
 </div>
 
-{{ end }}
+{{end}}
